# doom-serial

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  doom1.wad
doomgeneric/: config.h
examples/SDL/: CMakeLists.txt  sdl_example.c
examples/Serial/: CMakeLists.txt  linux_uart.cpp  serial.c  serial.cpp
examples/SerialBuds/: buds.c  buds.h  serial.cpp  serial.h
src/: common_serial.cpp  common_serial.h  d_iwad.c  d_main.c  doomgeneric.h  doomkeys.h  gusconf.c  i_system.c  i_system.h  i_video.c  i_video.h  m_argv.c  m_config.c  m_misc.c  p_saveg.c  v_video.c  w_file.c  w_file_embed.c  w_wad.c  z_zone.c  z_zone.h
src/DOOM/: DOOM.c  DOOM.h  common_serial.h  d_event.h  d_main.c  doom_config.h  g_game.c  i_sound.c  i_system.c  i_system.h  m_misc.c  p_setup.c  r_data.c  st_stuff.c  tables.c  tables.h  v_video.c  w_wad.c  wi_stuff.c  z_zone.c  z_zone.h
src/common/: common_serial.cpp  common_serial.h  wad_symbols.h
src/targets/buds/: buds.cpp  buds.h  stubs.cpp  stubs.h
src/targets/headless/: CMakeLists.txt  headless.cpp  linux_uart.cpp  linux_uart.h
