cmake_minimum_required(VERSION 3.9)
#cmake_policy(SET CMP0069 NEW)
#set(CMAKE_POLICY_DEFAULT_CMP0069 NEW)
project(PureDOOM)

#set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()
option(PUREDOOM_BUILD_SDL_EXAMPLE "" OFF)
option(PUREDOOM_BUILD_TESTS "" OFF)
option(PUREDOOM_SERIAL "" ON)

if (PUREDOOM_BUILD_SDL_EXAMPLE)
    add_subdirectory(examples/SDL)
endif()
if (PUREDOOM_BUILD_TESTS)
    enable_testing()
    add_subdirectory(examples/Tests)
endif()
if (PUREDOOM_SERIAL)
    add_subdirectory(examples/Serial)
endif()